# Sentry-App

./: .gitignore  .run.ps1  API_INTEGRATION_WITH_NATIVE.md  BLE_PHASE7_IMPLEMENTATION.md  CODE_SIZE_FIX.md  ESP32_BLUETOOTH_INTEGRATION_PLAN.md  GEMINI_AI_INTEGRATION_PLAN.md  NEO_6M_GPS_INTEGRATION_PLAN.md  TWO_TIER_APPROACH.md  TWO_TIER_APPROACH_REVIEW.md  app.json  package-lock.json  package.json
.github/workflows/: backend-lint.yml  health-check.yml
backend/: README.md  pyproject.toml
backend/sentry/: manage.py
backend/sentry/api/: router.py
backend/sentry/api/v1/: router.py
backend/sentry/api/v2/: router.py
backend/sentry/audit/models/: audit_log.py
backend/sentry/common/constants/choices/: __init__.py
backend/sentry/common/constants/choices/audit/: audit_choices.py
backend/sentry/common/constants/choices/misc/: model_name_choices.py
backend/sentry/common/constants/choices/token/: __init__.py  blacklistable_token_type_choices.py
backend/sentry/common/constants/messages/: __init__.py  general_messages.py
backend/sentry/common/constants/messages/core/: auth_messages.py
backend/sentry/common/exceptions/: __init__.py
backend/sentry/common/exceptions/core/: auth_exceptions.py  user_exceptions.py
backend/sentry/common/utils/: __init__.py  file_utils.py
backend/sentry/core/: apps.py
backend/sentry/core/ai/: gemini_service.py
backend/sentry/core/auth/: __init__.py  api_key.py  backends.py  jwt.py  utils.py
backend/sentry/core/controllers/: auth_controller.py  health_controller.py  user_controller.py
backend/sentry/core/management/commands/: create_initial_data.py
backend/sentry/core/migrations/: 0001_initial.py  0003_lovedone.py  0004_tokenblacklist.py
backend/sentry/core/models/: __init__.py  tokens.py  user.py
backend/sentry/core/models/managers/: user_manager.py
backend/sentry/core/router/: auth_router.py  core_router.py  health_router.py  user_router.py
backend/sentry/core/schemas/: __init__.py  auth_schema.py  user_schema.py
backend/sentry/core/templates/emails/: email_verification.html  password_reset.html
backend/sentry/core/utils/: email_utils.py
backend/sentry/device/controllers/: crash_controller.py  fcm_controller.py
backend/sentry/device/migrations/: 0003_remove_crashevent_gps_fix_at_crash_and_more.py
backend/sentry/device/models/: sensor_data.py
backend/sentry/device/router/: crash_router.py  device_router.py  mobile_router.py
backend/sentry/device/schemas/: __init__.py  fcm_schema.py
backend/sentry/sentry/: asgi.py  urls.py  wsgi.py
backend/sentry/sentry/settings/: base.py  config.py  dev.py  prod.py
device/: GPS_STATUS_DETECTION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md
device/Sentry_Device/: APIKeyStorage.cpp  APIKeyStorage.h  BluetoothHandler.cpp  BluetoothHandler.h  GPSHandler.cpp  GPSHandler.h  MPU6050Handler.cpp  Sentry_Device.ino  ServerHandler.cpp
device/testing/: README_BLE_TEST.md
device/testing/bluetooth/: bluetooth.ino
frontend/: app.json  metro.config.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/res/values/: strings.xml
frontend/app/: _layout.tsx  index.tsx
frontend/app/(app)/: _layout.tsx  profile.tsx
frontend/app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  contacts.tsx  history.tsx  home.tsx  index.tsx  settings.tsx
frontend/components/: ToastContainer.tsx
frontend/constants/: colors.ts
frontend/context/: AuthContext.tsx  DeviceContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/hooks/: useAuth.ts  useCrashDetection.ts  useFCM.ts  useLovedOne.ts  useRefresh.ts  useThemeColors.ts  useToast.ts  useUser.ts
frontend/lib/: api.ts  errorUtils.ts  storage.ts
frontend/services/: auth.service.ts  device.service.ts  loved_one.service.ts  user.service.ts
frontend/services/bluetooth/: bleManager.ts
frontend/services/notifications/: notificationService.ts
frontend/utils/: constants.ts
web/: package.json
web/src/: config.ts
web/src/layouts/: Layout.astro
web/src/pages/: 404.astro  index.astro  reset-password.astro  verify-email.astro
web/src/styles/: global.css
(+2 files in other folders)
